--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:paddingHorizontal="@dimen/common_padding_default"
     android:paddingVertical="@dimen/common_padding_min"
-    tools:context=".AddFragment">
+    tools:context=".ui.fragments.AddFragment">
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -56,7 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textCapSentences|textMultiLine"
-             />
+            android:maxLines="@integer/add_max_lines_title" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <ImageView
