--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+<!--
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -7,6 +8,13 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-
+-->
+    <color name="orange_200">#ff8a50</color>
+    <color name="orange_500">#ff5722</color>
+    <color name="orange_700">#c41c00</color>
+    <color name="cyan_200">#18ffff</color>
+    <color name="cyan_700">#00cbcc</color>
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
     <color name="gray_100">#f5f5f5</color>
 </resources>
